# cbioportal-article-classification

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  quickstart.sh  temp_query_script.py
data/metadata/: cbioportal_studies.json  citation_sentences.json  citations.json  classifications.csv  classifications.json  data_source_papers.json  oncotree_tumor_types.json
output/reports/: latest.md  usage_report.md  usage_report_20251219.md
src/cbioportal_article_classification/: __init__.py  analyzer.py  citation_extractor.py  classifier.py  config.py  fetcher.py  jats_parser.py  main.py  study_fetcher.py
